Fix app-launcher alignment with no icon

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -23,6 +23,7 @@
 @applauncher-pf-menu-link-background-color-hover:                   @color-pf-black-150;
 @applauncher-pf-menu-link-shadow:                                   @color-pf-black-300;
 @applauncher-pf-menu-link-icon-font-size:                           2em;
+@applauncher-pf-menu-link-icon-width:                               ((9 * @applauncher-pf-menu-link-icon-font-size) / 14); //Numbers to imitate fa-fw class
 @bootstrap-switch-handle-default-bg-color:                          @color-pf-black-100;
 @bootstrap-treeview-highlight-color:                                @color-pf-blue-300;
 @btn-default-bg-img-start:                                          @color-pf-black-100;
